--- a/src/NSC.Demo.AspNetCore/Views/_ViewImports.cshtml
+++ b/src/NSC.Demo.AspNetCore/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
 ﻿@inherits BasePage<TModel>
 
 @using NetSwiftClient
-@using NetSwiftClient.Models
+@using OpenStack.NetCoreSwiftClient.Infrastructure.Models
+@using OpenStack.NetCoreSwiftClient.Extensions
 @using NetSwiftClient.Demo.AspNetCore
 @using NetSwiftClient.Demo.AspNetCore.ViewModels
 @using NetSwiftClient.Demo.AspNetCore.Models
